--- a/main.html
+++ b/main.html
@@ -9,6 +9,61 @@
 </head>
 <body>
     <!-- add table here -->
+	<table>
+	<thead>
+		<tr>
+			<th>name</th>
+			<th>name</th>
+			<th>name</th>
+			<th>name</th>
+			<th>name</th>
+			<th>name</th>
+		</tr>
+		
+	</thead>
+	<tbody>
+		<tr>
+			<td>ram</td>
+			<td> 12</td>
+		    <td>34</td>
+			<td>56</td>
+			<td>67</td>
+			<td>57</td>
+		</tr>
+		<tr>
+			<td>ram</td>
+			<td> 12</td>
+		    <td>34</td>
+			<td>56</td>
+			<td>67</td>
+			<td>57</td>
+		</tr>
+		<tr>
+			<td>ram</td>
+			<td> 12</td>
+		    <td>34</td>
+			<td>56</td>
+			<td>67</td>
+			<td>57</td>
+		</tr>
+		<tr>
+			<td>ram</td>
+			<td> 12</td>
+		    <td>34</td>
+			<td>56</td>
+			<td>67</td>
+			<td>57</td>
+		</tr>
+		<tr>
+			<td>ram</td>
+			<td> 12</td>
+		    <td>34</td>
+			<td>56</td>
+			<td>67</td>
+			<td>57</td>
+		</tr>
+	</tbody>
+	</table>
 
         
 </body>
